@@ -44,8 +44,10 @@ import org.labkey.api.assay.DefaultAssayRunCreator;
 import org.labkey.api.attachments.AttachmentParent;
 import org.labkey.api.attachments.AttachmentService;
 import org.labkey.api.audit.AuditLogService;
+import org.labkey.api.audit.AuditTypeEvent;
 import org.labkey.api.audit.ExperimentAuditEvent;
 import org.labkey.api.audit.TransactionAuditProvider;
+import org.labkey.api.audit.provider.ContainerAuditProvider;
 import org.labkey.api.cache.Cache;
 import org.labkey.api.cache.CacheManager;
 import org.labkey.api.cache.DbCache;
@@ -69,6 +71,7 @@ import org.labkey.api.exp.query.ExpDataClassDataTable;
 import org.labkey.api.exp.query.ExpDataClassTable;
 import org.labkey.api.exp.query.ExpDataInputTable;
 import org.labkey.api.exp.query.ExpDataTable;
+import org.labkey.api.exp.query.ExpExperimentTable;
 import org.labkey.api.exp.query.ExpMaterialInputTable;
 import org.labkey.api.exp.query.ExpMaterialTable;
 import org.labkey.api.exp.query.ExpRunGroupMapTable;
@@ -120,6 +123,7 @@ import org.labkey.api.util.FileUtil;
 import org.labkey.api.util.GUID;
 import org.labkey.api.util.JunitUtil;
 import org.labkey.api.util.Pair;
+import org.labkey.api.util.ReentrantLockWithName;
 import org.labkey.api.util.StringUtilsLabKey;
 import org.labkey.api.util.TestContext;
 import org.labkey.api.util.UnexpectedException;
@@ -212,7 +216,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     public static final String EXPERIMENTAL_DOMAIN_DESIGNER = "experimental-uxdomaindesigner";
 
     private static final List<ExperimentListener> _listeners = new CopyOnWriteArrayList<>();
-    private static final ReentrantLock XAR_IMPORT_LOCK = new ReentrantLock();
+    private static final ReentrantLock XAR_IMPORT_LOCK = new ReentrantLockWithName(ExperimentServiceImpl.class, "XAR_IMPORT_LOCK");
 
     private final List<ExperimentRunTypeSource> _runTypeSources = new CopyOnWriteArrayList<>();
     private final Set<ExperimentDataHandler> _dataHandlers = new HashSet<>();
@@ -982,6 +986,17 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return experiment == null ? null : new ExpExperimentImpl(experiment);
     }
 
+    @Override
+    public List<? extends ExpExperiment> getExpExperiments(Collection<Integer> rowIds)
+    {
+        SimpleFilter filter = new SimpleFilter().addInClause(FieldKey.fromParts(ExpExperimentTable.Column.RowId.name()), rowIds);
+        TableSelector selector = new TableSelector(getTinfoExperiment(), filter, null);
+
+        final List<ExpExperimentImpl> experiments = new ArrayList<>(rowIds.size());
+        selector.forEach(Experiment.class, exp -> experiments.add(new ExpExperimentImpl(exp)));
+
+        return experiments;
+    }
 
     @Override
     public ExpProtocolImpl getExpProtocol(int rowid)
@@ -1671,10 +1686,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         try
         {
+            // next attempt to resolve by rowId
             Integer rowId = ConvertHelper.convert(sampleName, Integer.class);
 
-            // next attempt to resolve by rowId
-            return materialCache.computeIfAbsent(rowId, (x) -> getExpMaterial(c, user, rowId, sampleType));
+            if (rowId != null)
+                return materialCache.computeIfAbsent(rowId, (x) -> getExpMaterial(c, user, rowId, sampleType));
         }
         catch (ConversionException e1)
         {
@@ -3445,7 +3461,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         ClosureQueryHelper.invalidateAll();
     }
 
-
     public void verifyRunEdges(ExpRun run)
     {
         new SyncRunEdges(run)
@@ -3453,7 +3468,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 .verifyEdgesNoInsert(true)
                 .sync(null);
     }
-
 
     public void verifyAllEdges(Container c, @Nullable Integer limit)
     {
@@ -3555,7 +3569,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 ParticipantVisit.ASSAY_RUN_MATERIAL_NAMESPACE.equals(output.getLSIDNamespacePrefix());
     }
 
-
     /**
      * @return the data objects that were attached to the run that should be attached to the run in its new folder
      */
@@ -3568,14 +3581,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return datasToDelete;
     }
 
-
     private void deleteRun(int runId, List<ExpDataImpl> datasToDelete, User user, String userComment)
     {
         ExpRunImpl run = getExpRun(runId);
         if (run == null)
-        {
             return;
-        }
 
         for (ExperimentListener listener : _listeners)
         {
@@ -3611,6 +3621,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             throw new IllegalStateException("Could not resolve protocol for run LSID " + run.getLSID() + " with protocol LSID " + run.getDataObject().getProtocolLSID() );
         }
         auditRunEvent(user, protocol, run, null, "Run deleted", userComment);
+
+        for (ExperimentListener listener : _listeners)
+        {
+            listener.afterRunDelete(run.getProtocol(), run, user);
+        }
     }
 
 
@@ -4088,147 +4103,146 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         if (selectedRunIds.isEmpty())
             return;
 
-        for (Integer runId : selectedRunIds)
+        try (DbScope.Transaction transaction = ensureTransaction())
         {
-            try (DbScope.Transaction transaction = ensureTransaction())
+            for (Integer runId : selectedRunIds)
             {
                 final ExpRunImpl run = getExpRun(runId);
-                if (run != null)
+                if (run == null)
+                    continue;
+
+                SimpleFilter containerFilter = new SimpleFilter(FieldKey.fromParts("RunId"), runId);
+                Table.delete(getTinfoAssayQCFlag(), containerFilter);
+
+                ExpProtocol protocol = run.getProtocol();
+                ProtocolImplementation protocolImpl = null;
+                if (protocol != null)
                 {
-                    SimpleFilter containerFilter = new SimpleFilter(FieldKey.fromParts("RunId"), runId);
-                    Table.delete(getTinfoAssayQCFlag(), containerFilter);
+                    protocolImpl = protocol.getImplementation();
 
-                    ExpProtocol protocol = run.getProtocol();
-                    ProtocolImplementation protocolImpl = null;
-                    if (protocol != null)
+                    if (!run.canDelete(user))
+                        throw new UnauthorizedException("You do not have permission to delete " +
+                                (ExpProtocol.isSampleWorkflowProtocol(run.getProtocol().getLSID()) ? "jobs" : "runs")
+                                + " in " + run.getContainer());
+                    StudyPublishService publishService = StudyPublishService.get();
+                    if (publishService != null)
                     {
-                        protocolImpl = protocol.getImplementation();
+                        AssayWellExclusionService svc = AssayWellExclusionService.getProvider(protocol);
+                        if (svc != null)
+                            svc.deleteExclusionsForRun(protocol, runId);
 
-                        if (!run.canDelete(user))
-                            throw new UnauthorizedException("You do not have permission to delete " +
-                                    (ExpProtocol.isSampleWorkflowProtocol(run.getProtocol().getLSID()) ? "jobs" : "runs")
-                                    + " in " + run.getContainer());
-                        StudyPublishService publishService = StudyPublishService.get();
-                        if (publishService != null)
+                        for (Dataset dataset : publishService.getDatasetsForAssayRuns(Collections.singletonList(run), user))
                         {
-                            AssayWellExclusionService svc = AssayWellExclusionService.getProvider(protocol);
-                            if (svc != null)
-                                svc.deleteExclusionsForRun(protocol, runId);
-
-                            for (Dataset dataset : publishService.getDatasetsForAssayRuns(Collections.singletonList(run), user))
+                            // NOTE: these datasets come from various different containers
+                            UserSchema schema = QueryService.get().getUserSchema(user, dataset.getContainer(), "study");
+                            TableInfo tableInfo = schema.getTable(dataset.getName());
+                            if (null == tableInfo || !dataset.hasPermission(user, DeletePermission.class))
                             {
-                                // NOTE: these datasets come from various different containers
-                                UserSchema schema = QueryService.get().getUserSchema(user, dataset.getContainer(), "study");
-                                TableInfo tableInfo = schema.getTable(dataset.getName());
-                                if (null == tableInfo || !dataset.hasPermission(user, DeletePermission.class))
-                                {
-                                    throw new UnauthorizedException("Cannot delete rows from dataset " + dataset);
-                                }
-
-                                AssayProvider provider = AssayService.get().getProvider(protocol);
-                                if (provider != null)
-                                {
-                                    AssayTableMetadata tableMetadata = provider.getTableMetadata(protocol);
-                                    SimpleFilter filter = new SimpleFilter(tableMetadata.getRunRowIdFieldKeyFromResults(), run.getRowId());
-                                    Collection<String> lsids = new TableSelector(tableInfo, singleton("LSID"), filter, null).getCollection(String.class);
-
-                                    // Add an audit event to the link to study history
-                                    publishService.addRecallAuditEvent(run.getContainer(), user, dataset, lsids.size(), null);
-
-                                    // Do the actual delete on the dataset for the rows in question
-                                    dataset.deleteDatasetRows(user, lsids);
-                                }
-                            }
-                        }
-                        else
-                        {
-                            LOG.info("Skipping delete of dataset rows associated with this run: Study service not available.");
-                        }
-                    }
-
-                    // Grab these to delete after we've deleted the Data rows
-                    List<ExpDataImpl> datasToDelete = getAllDataOwnedByRun(runId);
-
-                    // Find the cross-run file input or output exp.data to delete after the run is deleted:
-                    // - data outputs that have the same dataFileUrl as an "cross run input" exp.data input and aren't being used in another run.
-                    // - data inputs with "cross run input" role, have no custom file properties, and aren't being used in another run.
-                    List<ExpDataImpl> crossRunInputs = new ArrayList<>();
-                    List<ExpDataImpl> crossRunOutputs = new ArrayList<>();
-                    List<ExpDataImpl> inputData = run.getInputDatas(DefaultAssayRunCreator.CROSS_RUN_DATA_INPUT_ROLE, null);
-                    if (!inputData.isEmpty())
-                    {
-                        for (ExpDataImpl input : inputData)
-                        {
-                            // Find a matching exp.data output with the same dataFileUrl
-                            for (ExpDataImpl output : datasToDelete)
-                            {
-                                if (input.getDataFileUrl().equals(output.getDataFileUrl()))
-                                {
-                                    // Don't delete the exp.data output if it is being used in other runs
-                                    List<? extends ExpRun> otherUsages = getRunsUsingDatas(List.of(output));
-                                    otherUsages.remove(run);
-                                    if (!otherUsages.isEmpty())
-                                    {
-                                        LOG.debug("Skipping delete of cross-run output data '" + output.getName() + "' (" + output.getRowId() + ") used by other runs: " + otherUsages.stream().map(ExpRun::getName).collect(Collectors.joining(", ")));
-                                        break;
-                                    }
-
-                                    crossRunOutputs.add(output);
-                                }
+                                throw new UnauthorizedException("Cannot delete rows from dataset " + dataset);
                             }
 
-                            // If there are comments or file properties attached to the exp.data don't delete it.
-                            // TODO: We don't want to delete exp.data for uploaded files since we track created/createdby and other metadata... is there a better way to identify these exp.data we don't want to delete?
-                            // CONSIDER: move these properties to the matching output exp.data with the same dataFileUrl?
-                            if (hasFileProperties(container, input))
+                            AssayProvider provider = AssayService.get().getProvider(protocol);
+                            if (provider != null)
                             {
-                                LOG.debug("Skipping delete of cross-run input data '" + input.getName() + "' (" + input.getRowId() + ") with custom file properties");
-                                continue;
-                            }
+                                AssayTableMetadata tableMetadata = provider.getTableMetadata(protocol);
+                                SimpleFilter filter = new SimpleFilter(tableMetadata.getRunRowIdFieldKeyFromResults(), run.getRowId());
+                                Collection<String> lsids = new TableSelector(tableInfo, singleton("LSID"), filter, null).getCollection(String.class);
 
-                            // If the file has no other usages, we can delete it.
-                            List<? extends ExpRun> otherUsages = getRunsUsingDatas(List.of(input));
-                            otherUsages.remove(run);
-                            if (otherUsages.isEmpty())
-                            {
-                                crossRunInputs.add(input);
+                                // Add an audit event to the link to study history
+                                publishService.addRecallAuditEvent(run.getContainer(), user, dataset, lsids.size(), null);
+
+                                // Do the actual delete on the dataset for the rows in question
+                                dataset.deleteDatasetRows(user, lsids);
                             }
                         }
                     }
-
-                    // Archive all data files prior to deleting
-                    //  ideally this would be transacted as a commit task but we decided against it due to complications
-                    run.archiveDataFiles(user);
-
-                    deleteRun(runId, datasToDelete, user, userComment);
-
-                    for (ExpData data : datasToDelete)
+                    else
                     {
-                        ExperimentDataHandler handler = data.findDataHandler();
-                        handler.deleteData(data, container, user);
+                        LOG.info("Skipping delete of dataset rows associated with this run: Study service not available.");
                     }
-
-                    // Delete the cross run data completely
-                    for (ExpDataImpl data : crossRunInputs)
-                    {
-                        LOG.debug("Deleting cross-run input data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
-                        data.delete(user, false);
-                    }
-                    for (ExpDataImpl data : crossRunOutputs)
-                    {
-                        LOG.debug("Deleting cross-run output data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
-                        data.delete(user, false);
-                    }
-
-                    if (protocolImpl != null)
-                        protocolImpl.onRunDeleted(container, user);
                 }
 
-                transaction.commit();
+                // Grab these to delete after we've deleted the Data rows
+                List<ExpDataImpl> datasToDelete = getAllDataOwnedByRun(runId);
+
+                // Find the cross-run file input or output exp.data to delete after the run is deleted:
+                // - data outputs that have the same dataFileUrl as an "cross run input" exp.data input and aren't being used in another run.
+                // - data inputs with "cross run input" role, have no custom file properties, and aren't being used in another run.
+                List<ExpDataImpl> crossRunInputs = new ArrayList<>();
+                List<ExpDataImpl> crossRunOutputs = new ArrayList<>();
+                List<ExpDataImpl> inputData = run.getInputDatas(DefaultAssayRunCreator.CROSS_RUN_DATA_INPUT_ROLE, null);
+                if (!inputData.isEmpty())
+                {
+                    for (ExpDataImpl input : inputData)
+                    {
+                        // Find a matching exp.data output with the same dataFileUrl
+                        for (ExpDataImpl output : datasToDelete)
+                        {
+                            if (input.getDataFileUrl().equals(output.getDataFileUrl()))
+                            {
+                                // Don't delete the exp.data output if it is being used in other runs
+                                List<? extends ExpRun> otherUsages = getRunsUsingDatas(List.of(output));
+                                otherUsages.remove(run);
+                                if (!otherUsages.isEmpty())
+                                {
+                                    LOG.debug("Skipping delete of cross-run output data '" + output.getName() + "' (" + output.getRowId() + ") used by other runs: " + otherUsages.stream().map(ExpRun::getName).collect(Collectors.joining(", ")));
+                                    break;
+                                }
+
+                                crossRunOutputs.add(output);
+                            }
+                        }
+
+                        // If there are comments or file properties attached to the exp.data don't delete it.
+                        // TODO: We don't want to delete exp.data for uploaded files since we track created/createdby and other metadata... is there a better way to identify these exp.data we don't want to delete?
+                        // CONSIDER: move these properties to the matching output exp.data with the same dataFileUrl?
+                        if (hasFileProperties(container, input))
+                        {
+                            LOG.debug("Skipping delete of cross-run input data '" + input.getName() + "' (" + input.getRowId() + ") with custom file properties");
+                            continue;
+                        }
+
+                        // If the file has no other usages, we can delete it.
+                        List<? extends ExpRun> otherUsages = getRunsUsingDatas(List.of(input));
+                        otherUsages.remove(run);
+                        if (otherUsages.isEmpty())
+                        {
+                            crossRunInputs.add(input);
+                        }
+                    }
+                }
+
+                // Archive all data files prior to deleting
+                //  ideally this would be transacted as a commit task but we decided against it due to complications
+                run.archiveDataFiles(user);
+
+                deleteRun(runId, datasToDelete, user, userComment);
+
+                for (ExpData data : datasToDelete)
+                {
+                    ExperimentDataHandler handler = data.findDataHandler();
+                    handler.deleteData(data, container, user);
+                }
+
+                // Delete the cross run data completely
+                for (ExpDataImpl data : crossRunInputs)
+                {
+                    LOG.debug("Deleting cross-run input data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
+                    data.delete(user, false);
+                }
+                for (ExpDataImpl data : crossRunOutputs)
+                {
+                    LOG.debug("Deleting cross-run output data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
+                    data.delete(user, false);
+                }
+
+                if (protocolImpl != null)
+                    protocolImpl.onRunDeleted(container, user);
             }
+
+            transaction.commit();
         }
     }
-
 
     // return true if the data has a comment or any other custom file properties
     private boolean hasFileProperties(Container c, ExpData data)
@@ -4422,6 +4436,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             int[] orphanedProtocolIds = ArrayUtils.toPrimitive(new SqlSelector(getExpSchema(), sql).getArray(Integer.class));
             deleteProtocolByRowIds(c, user,null, orphanedProtocolIds);
 
+            removeDataTypeExclusion(Arrays.asList(ArrayUtils.toObject(selectedProtocolIds)), DataTypeForExclusion.AssayDesign);
             if (assayService != null)
             {
                 transaction.addCommitTask(() -> {
@@ -4443,7 +4458,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
 
         if (assayService != null)
-            assayService.unindexAssays(Collections.unmodifiableCollection(expProtocols));
+            assayService.deindexAssays(Collections.unmodifiableCollection(expProtocols));
     }
 
     private void deleteProtocolInputs(Container c, String protocolIdsInClause)
@@ -4636,9 +4651,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     sampleTypeAliquotRoots.computeIfAbsent(sampleType, (k) -> new HashSet<>())
                             .add(material.getRootMaterialLSID());
                 }
-
             }
-
 
             try (Timing ignored = MiniProfiler.step("beforeDelete"))
             {
@@ -4782,11 +4795,37 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     private void deleteRunsUsingInputs(User user, Collection<Data> dataItems, Collection<Material> materialItems)
     {
         var runsUsingItems = new ArrayList<ExpRun>();
-        if (null != dataItems && !dataItems.isEmpty())
-            runsUsingItems.addAll(getRunsUsingDataIds(dataItems.stream().map(RunItem::getRowId).collect(Collectors.toList())));
+        List<Integer> dataIds = dataItems == null || dataItems.isEmpty() ? Collections.emptyList() : dataItems.stream().map(RunItem::getRowId).toList();
+        Set<Integer> sampleIds = materialItems == null || materialItems.isEmpty() ? Collections.emptySet() : materialItems.stream().map(RunItem::getRowId).collect(Collectors.toSet());
 
-        if (null != materialItems && !materialItems.isEmpty())
+        if (!dataIds.isEmpty())
+            runsUsingItems.addAll(getDeletableSourceRunsFromInputRowId(dataIds, getTinfoData(), sampleIds, getTinfoMaterial()));
+
+        if (!sampleIds.isEmpty())
+            // get all the runs that use these samples as inputs
             runsUsingItems.addAll(getDeletableRunsFromMaterials(ExpMaterialImpl.fromMaterials(materialItems)));
+
+        if (!runsUsingItems.isEmpty())
+        {
+            Set<ExpRun> runsToKeep = new HashSet<>();
+            // determine if there are any outputs of this run that are not being deleted. If so, remove the run from the runs to be deleted.
+            runsUsingItems.forEach(run -> {
+                run.getMaterialOutputs().forEach(
+                    sample -> {
+                        if (!sampleIds.contains(sample.getRowId()))
+                            runsToKeep.add(sample.getRun());
+                    }
+                );
+                run.getDataOutputs().forEach(
+                    dataObject -> {
+                        if (!dataIds.contains(dataObject.getRowId()))
+                            runsToKeep.add(dataObject.getRun());
+                    }
+                );
+            });
+            runsUsingItems.removeAll(runsToKeep);
+
+        }
 
         List<? extends ExpRun> runsToDelete = runsDeletedWithInput(runsUsingItems);
         if (runsToDelete.isEmpty())
@@ -4824,9 +4863,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
     }
 
-    private Collection<? extends ExpRun> getDeleteableSourceRunsFromMaterials(Set<Integer> materialIds)
+    private Collection<? extends ExpRun> getDeletableSourceRunsFromInputRowId(Collection<Integer> rowIds, TableInfo primaryTableInfo, Collection<Integer> siblingRowIds, TableInfo siblingTableInfo)
     {
-        if (materialIds == null || materialIds.isEmpty())
+        if (rowIds == null || rowIds.isEmpty())
             return Collections.emptyList();
 
         /* Ex. SQL
@@ -4846,26 +4885,56 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                         WHERE m3.rowId in (3592, 3593, 3594)
                             AND m2.rowId = m3.rowId
                     )
+            )
+            AND NOT EXIST (
+             -- Check for siblings that are not being deleted
+                SELECT DISTINCT d.runId
+                FROM exp.data d
+                WHERE m.rowId in (3592, 3593, 3594)
+                    AND m.runId = d.runId
+                    -- exclude siblings from selected materialIds
+                    AND NOT EXIST (
+                        SELECT rowId
+                        FROM exp.data d2
+                        WHERE d2.rowId in (23592, 23593, 23594)
+                            AND d.rowId = d2.rowId
+                    )
+
             );
          */
 
-        SQLFragment idInclause = getAppendInClause(materialIds);
+        SQLFragment idInClause = getAppendInClause(rowIds);
+        SQLFragment siblingIdInClause = getAppendInClause(siblingRowIds);
 
         SQLFragment sql = new SQLFragment(
                 "SELECT DISTINCT m.runId\n")
-                .append("FROM ").append(getTinfoMaterial(), "m").append("\n")
-                .append("WHERE m.rowId ").append(idInclause).append("\n")
+                .append("FROM ").append(primaryTableInfo, "m").append("\n")
+                .append("WHERE m.rowId ").append(idInClause).append("\n")
                 .append("AND NOT EXISTS (\n")
                 .append("SELECT DISTINCT m2.runId\n")
-                .append("FROM ").append(getTinfoMaterial(), "m2").append("\n")
-                .append("WHERE m.rowId ").append(idInclause).append("\n")
+                .append("FROM ").append(primaryTableInfo, "m2").append("\n")
+                .append("WHERE m.rowId ").append(idInClause).append("\n")
                 .append("AND m.runId = m2.runId\n")
                 .append("AND NOT EXISTS (\n") // m2.rowID not in materialIds
-                .append("SELECT rowId FROM ").append(getTinfoMaterial(), "m3").append("\n")
-                .append("WHERE m3.rowId ").append(idInclause).append("\n")
+                .append("SELECT rowId FROM ").append(primaryTableInfo, "m3").append("\n")
+                .append("WHERE m3.rowId ").append(idInClause).append("\n")
                 .append("AND m2.rowId = m3.rowId\n")
-                .append(")\n")
-                .append(")");
+                .append("))\n")
+                .append("AND NOT EXISTS (\n")
+                .append("SELECT DISTINCT s.runId\n")
+                .append("FROM ").append(siblingTableInfo, "s").append("\n")
+                .append("WHERE m.rowId ").append(idInClause).append("\n")
+                .append("AND m.runId = s.runId\n");
+        if (!siblingRowIds.isEmpty())
+        {
+            sql.append("AND NOT EXISTS (\n") // s2.rowID not in siblingRowIds
+                    .append("SELECT rowId FROM ").append(siblingTableInfo, "s2").append("\n")
+                    .append("WHERE s2.rowId ").append(siblingIdInClause).append("\n")
+                    .append("AND s.rowId = s2.rowId\n")
+                    .append(")");
+        }
+        sql.append(")");
+
 
         return ExpRunImpl.fromRuns(getRunsForRunIds(sql));
     }
@@ -4933,7 +5002,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return parents;
 
     }
-
 
     public void deleteDataByRowIds(User user, Container container, Collection<Integer> selectedDataIds)
     {
@@ -5048,10 +5116,12 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             SearchService ss = SearchService.get();
             if (null != ss)
             {
+                Set<String> documentIds = new HashSet<>();
                 for (ExpDataImpl data : ExpDataImpl.fromDatas(datas))
                 {
-                    ss.deleteResource(data.getDocumentId());
+                    documentIds.add(data.getDocumentId());
                 }
+                ss.deleteResources(documentIds);
             }
 
             transaction.commit();
@@ -5071,13 +5141,14 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
 
         ExpExperimentImpl experiment = getExpExperiment(rowId);
-        if(experiment == null)
+        if (experiment == null)
             return;
 
         deleteExpExperiment(c, user, experiment);
     }
 
-    private void deleteExpExperiment(Container c, User user, ExpExperimentImpl experiment)
+    // TODO: This should be refactored to support deletion of multiple ExpExperiments at one time
+    private void deleteExpExperiment(Container c, User user, @NotNull ExpExperimentImpl experiment)
     {
         try (DbScope.Transaction t = ensureTransaction())
         {
@@ -5102,7 +5173,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             OntologyManager.deleteOntologyObjects(experiment.getContainer(), experiment.getLSID());
 
             // Inform the listeners.
-            for (ExperimentListener listener: _listeners)
+            for (ExperimentListener listener : _listeners)
             {
                 listener.beforeExperimentDeleted(c, user, experiment);
             }
@@ -5111,6 +5182,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     + " WHERE RowId = " + experiment.getRowId()
                     + " AND Container = ?", experiment.getContainer());
             executor.execute(sql);
+
+            for (ExperimentListener listener : _listeners)
+            {
+                listener.afterExperimentDeleted(c, user, experiment);
+            }
 
             t.commit();
         }
@@ -5189,11 +5265,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 deleteExpExperiment(c, user, exp);
             }
 
-            // now delete protocols (including their nested actions and parameters.
+            // now delete protocols (including their nested actions and parameters).
             deleteProtocolByRowIds(c, user, null, protIds);
 
             // now delete starting materials that were not associated with a MaterialSource upload.
-            // we get this list now so that it doesn't include all of the run-scoped Materials that were
+            // we get this list now so that it doesn't include all the run-scoped Materials that were
             // deleted already
             sql = "SELECT RowId FROM exp.Material WHERE Container = ?";
             Collection<Integer> matIds = new SqlSelector(getExpSchema(), sql, c).getCollection(Integer.class);
@@ -5681,6 +5757,8 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             SqlExecutor executor = new SqlExecutor(getExpSchema());
             executor.execute("UPDATE " + getTinfoProtocolInput() + " SET dataClassId = NULL WHERE dataClassId = ?", rowId);
             executor.execute("DELETE FROM " + getTinfoDataClass() + " WHERE RowId = ?", rowId);
+
+            removeDataTypeExclusion(Collections.singleton(rowId), DataTypeForExclusion.DataClass);
 
             transaction.addCommitTask(() -> clearDataClassCache(dcContainer), DbScope.CommitTaskOption.IMMEDIATE, POSTCOMMIT, POSTROLLBACK);
             transaction.commit();
@@ -7509,6 +7587,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             //TODO do DataClasses actually support default values? The DataClassDomainKind does not override showDefaultValueSettings to return true so it isn't shown in the UI.
             DefaultValueService.get().setDefaultValues(domain.getContainer(), defaultValues);
 
+            if (options != null && options.getExcludedContainerIds() != null && !options.getExcludedContainerIds().isEmpty())
+                ExperimentService.get().ensureDataTypeContainerExclusions(DataTypeForExclusion.DataClass, options.getExcludedContainerIds(), impl.getRowId(), u);
+
             tx.addCommitTask(() -> clearDataClassCache(c), DbScope.CommitTaskOption.IMMEDIATE, POSTCOMMIT, POSTROLLBACK);
             tx.commit();
         }
@@ -7571,6 +7652,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
             if (hasNameChange)
                 addObjectLegacyName(dataClass.getObjectId(), ExperimentServiceImpl.getNamespacePrefix(ExpDataClass.class), oldDataClassName, u);
+
+            if (options != null && options.getExcludedContainerIds() != null)
+                ExperimentService.get().ensureDataTypeContainerExclusions(DataTypeForExclusion.DataClass, options.getExcludedContainerIds(), dataClass.getRowId(), u);
 
             if (!errors.hasErrors())
             {
@@ -8058,6 +8142,22 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         _listeners.add(listener);
     }
 
+    public void onAfterExperimentSaved(ExpExperiment experiment, Container container, User user)
+    {
+        for (ExperimentListener listener : _listeners)
+        {
+            listener.afterExperimentSaved(container, user, experiment);
+        }
+    }
+
+    public void onAfterRunSaved(ExpProtocol protocol, ExpRun run, Container container, User user)
+    {
+        for (ExperimentListener listener : _listeners)
+        {
+            listener.afterRunSaved(container, user, protocol, run);
+        }
+    }
+
     @Override
     public void onBeforeRunSaved(ExpProtocol protocol, ExpRun run, Container container, User user) throws BatchValidationException
     {
@@ -8097,7 +8197,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             Set<Integer> materialIds = materials.stream().map(ExpMaterial::getRowId).collect(toSet());
             runsUsingItems.addAll(getDerivedRunsFromMaterial(materialIds));
-            runsUsingItems.addAll(getDeleteableSourceRunsFromMaterials(materialIds));
+            runsUsingItems.addAll(getDeletableSourceRunsFromInputRowId(materialIds, getTinfoMaterial(), Collections.emptySet(), getTinfoData()));
         }
 
         return new ArrayList<>(runsDeletedWithInput(runsUsingItems));
@@ -8141,8 +8241,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return Collections.unmodifiableList(_runOutputsQueryViews);
     }
 
-    @Override
-    public void addDataTypeExclusion(int rowId, DataTypeForExclusion dataType, String excludedContainerId, User user)
+    private void addDataTypeExclusion(int rowId, DataTypeForExclusion dataType, String excludedContainerId, User user)
     {
         Map<String, Object> fields = new HashMap<>();
         fields.put("DataTypeRowId", rowId);
@@ -8151,20 +8250,40 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         Table.insert(user, getTinfoDataTypeExclusion(), fields);
     }
 
-    public void removeDataTypeExclusion(int rowId, DataTypeForExclusion dataType, String excludedContainerId, User user)
+    @Override
+    public void removeContainerDataTypeExclusions(String containerId)
     {
         SQLFragment sql = new SQLFragment("DELETE FROM  ")
                 .append(getTinfoDataTypeExclusion())
-                .append(" WHERE DataTypeRowId = ? AND DataType = ? AND ExcludedContainer = ?");
-        sql.add(rowId);
-        sql.add(dataType.name());
-        sql.add(excludedContainerId);
-
+                .append(" WHERE excludedContainer = ? ");
+        sql.add(containerId);
         new SqlExecutor(getExpSchema()).execute(sql);
     }
 
     @Override
-    public Map<String, Object>[] getContainerDataTypeExclusions(@Nullable DataTypeForExclusion dataType, @Nullable String excludedContainerId, @Nullable Integer dataTypeRowId)
+    public void removeDataTypeExclusion(Collection<Integer> rowIds, DataTypeForExclusion dataType)
+    {
+        removeDataTypeExclusion(rowIds, dataType, null);
+    }
+
+    private void removeDataTypeExclusion(Collection<Integer> rowIds, DataTypeForExclusion dataType, @Nullable String excludedContainerId)
+    {
+        SQLFragment sql = new SQLFragment("DELETE FROM  ")
+                .append(getTinfoDataTypeExclusion())
+                .append(" WHERE DataTypeRowId ");
+        sql.appendInClause(rowIds, getExpSchema().getSqlDialect());
+        sql.append(" AND DataType = ?");
+        sql.add(dataType.name());
+        if (!StringUtils.isEmpty(excludedContainerId))
+        {
+            sql.append(" AND ExcludedContainer = ?");
+            sql.add(excludedContainerId);
+        }
+
+        new SqlExecutor(getExpSchema()).execute(sql);
+    }
+
+    @NotNull private Map<String, Object>[] _getContainerDataTypeExclusions(@Nullable DataTypeForExclusion dataType, @Nullable String excludedContainerIdOrPath, @Nullable Integer dataTypeRowId)
     {
         SQLFragment sql = new SQLFragment("SELECT DataTypeRowId, DataType, ExcludedContainer FROM ")
                 .append(getTinfoDataTypeExclusion())
@@ -8177,8 +8296,16 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             and = " AND ";
         }
 
-        if (!StringUtils.isEmpty(excludedContainerId))
+        if (!StringUtils.isEmpty(excludedContainerIdOrPath))
         {
+            String excludedContainerId = excludedContainerIdOrPath;
+            if (!GUID.isGUID(excludedContainerIdOrPath))
+            {
+                Container container = ContainerManager.getForPath(excludedContainerIdOrPath);
+                if (container != null)
+                    excludedContainerId = container.getId();
+            }
+
             sql.append(and);
             sql.append("ExcludedContainer = ? ");
             sql.add(excludedContainerId);
@@ -8195,10 +8322,39 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return new SqlSelector(getTinfoDataTypeExclusion().getSchema(), sql).getMapArray();
     }
 
-    public Set<Integer> getContainerDataTypeExclusions(DataTypeForExclusion dataType, String excludedContainerId)
+    @Override
+    public @NotNull Map<DataTypeForExclusion, Set<Integer>> getContainerDataTypeExclusions(@NotNull String excludedContainerId)
+    {
+        Map<String, Object>[] exclusions = _getContainerDataTypeExclusions(null, excludedContainerId, null);
+
+        Map<DataTypeForExclusion, Set<Integer>> typeExclusions = new HashMap<>();
+        for (Map<String, Object> exclusion : exclusions)
+        {
+            String dataTypeStr = (String) exclusion.get("DataType");
+            DataTypeForExclusion dataType = DataTypeForExclusion.valueOf(dataTypeStr);
+            if (!typeExclusions.containsKey(dataType))
+                typeExclusions.put(dataType, new HashSet<>());
+            typeExclusions.get(dataType).add((Integer) exclusion.get("DataTypeRowId"));
+        }
+
+        return typeExclusions;
+    }
+
+    @Override
+    public Set<String> getDataTypeContainerExclusions(@NotNull DataTypeForExclusion dataType, @NotNull Integer dataTypeRowId)
+    {
+        Map<String, Object>[] exclusions = _getContainerDataTypeExclusions(dataType, null, dataTypeRowId);
+        Set<String> excludedProjects = new HashSet<>();
+        for (Map<String, Object> exclusion : exclusions)
+            excludedProjects.add((String) exclusion.get("ExcludedContainer"));
+        return excludedProjects;
+    }
+
+
+    private Set<Integer> _getContainerDataTypeExclusions(DataTypeForExclusion dataType, String excludedContainerId)
     {
         Set<Integer> excludedRowIds = new HashSet<>();
-        Map<String, Object>[] exclusions = getContainerDataTypeExclusions(dataType, excludedContainerId, null);
+        Map<String, Object>[] exclusions = _getContainerDataTypeExclusions(dataType, excludedContainerId, null);
         for (Map<String, Object> exclusion : exclusions)
             excludedRowIds.add((Integer) exclusion.get("DataTypeRowId"));
 
@@ -8206,12 +8362,12 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     }
 
     @Override
-    public void ensureContainerDataTypeExclusions(@Nullable DataTypeForExclusion dataType, @Nullable Collection<Integer> excludedDataTypeRowIds, @Nullable String excludedContainerId, User user)
+    public void ensureContainerDataTypeExclusions(@NotNull DataTypeForExclusion dataType, @Nullable Collection<Integer> excludedDataTypeRowIds, @NotNull String excludedContainerId, User user)
     {
         if (excludedDataTypeRowIds == null)
             return;
 
-        Set<Integer> previousExclusions = getContainerDataTypeExclusions(dataType, excludedContainerId);
+        Set<Integer> previousExclusions = _getContainerDataTypeExclusions(dataType, excludedContainerId);
         Set<Integer> updatedExclusions = new HashSet<>(excludedDataTypeRowIds);
 
         Set<Integer> toAdd = new HashSet<>(updatedExclusions);
@@ -8227,10 +8383,68 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
 
         if (!toRemove.isEmpty())
+            removeDataTypeExclusion(toRemove, dataType, excludedContainerId);
+    }
+
+    @Override
+    public void ensureDataTypeContainerExclusions(@NotNull DataTypeForExclusion dataType, @Nullable Collection<String> excludedContainerIds, @NotNull Integer dataTypeId, User user)
+    {
+        if (excludedContainerIds == null)
+            return;
+
+        Set<String> previousExclusions = getDataTypeContainerExclusions(dataType, dataTypeId);
+        Set<String> updatedExclusions = new HashSet<>(excludedContainerIds);
+
+        Set<String> toAdd = new HashSet<>(updatedExclusions);
+        toAdd.removeAll(previousExclusions);
+
+        Set<String> toRemove = new HashSet<>(previousExclusions);
+        toRemove.removeAll(updatedExclusions);
+
+        if (!toAdd.isEmpty())
         {
-            for (Integer remove : toRemove)
-                removeDataTypeExclusion(remove, dataType, excludedContainerId, user);
+            for (String add : toAdd)
+            {
+                addDataTypeExclusion(dataTypeId, dataType, add, user);
+                addAuditEventForDataTypeContainerUpdate(dataType, add, user);
+            }
         }
+
+        if (!toRemove.isEmpty())
+        {
+            for (String remove : toRemove)
+            {
+                removeDataTypeExclusion(Collections.singleton(dataTypeId), dataType, remove);
+                addAuditEventForDataTypeContainerUpdate(dataType, remove, user);
+            }
+        }
+    }
+
+    private void addAuditEventForDataTypeContainerUpdate(DataTypeForExclusion type, String containerId, User user)
+    {
+        Container container = ContainerManager.getForId(containerId);
+        if (container != null)
+        {
+            Set<Integer> exclusions = _getContainerDataTypeExclusions(type, containerId);
+            String auditMsg = ("Data exclusion for folder " + container.getName() + " was updated.\n")
+                    + getDisabledDataTypeAuditMsg(type, exclusions.stream().toList(), true);
+            AuditTypeEvent event = new AuditTypeEvent(ContainerAuditProvider.CONTAINER_AUDIT_EVENT, container.getId(), auditMsg);
+            AuditLogService.get().addEvent(user, event);
+        }
+    }
+
+    @Override
+    public String getDisabledDataTypeAuditMsg(DataTypeForExclusion type, List<Integer> ids, boolean isUpdate)
+    {
+        StringBuilder builder = new StringBuilder();
+        if (ids != null && (isUpdate || !ids.isEmpty()))
+        {
+            if (isUpdate && ids.isEmpty())
+                builder.append(type.name()).append( " exclusion has been cleared.\n");
+            else
+                builder.append("Excluded ").append(type.name()).append(": ").append(StringUtils.join(ids, ", ")).append(".\n");
+        }
+        return builder.toString();
     }
 
     @Override
@@ -8721,6 +8935,8 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
     public static class TestCase extends Assert
     {
+        final Logger log = LogManager.getLogger(ExperimentServiceImpl.class);
+
         @Before
         public void setUp()
         {
@@ -8741,7 +8957,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             final User user = TestContext.get().getUser();
             final Container c = JunitUtil.getTestContainer();
             final ViewBackgroundInfo info = new ViewBackgroundInfo(c, user, null);
-            final Logger log = LogManager.getLogger(ExperimentServiceImpl.class);
 
             // assert no MaterialInput exp.object exist
             assertEquals(0L, countMaterialInputObjects(c));
